CRUD LISTO PERO ME FALLA EL GET

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 
 # Generación de la base de datos
-#spring.sql.init.schema-locations=classpath:initSQL/01-create-db.sql
+spring.sql.init.schema-locations=classpath:initSQL/01-create-db.sql
 
 # Adición de datos a la base de datos
-#spring.sql.init.data-locations=\
-#  classpath:initSQL/beers.sql,\
-#  classpath:initSQL/breweries.sql,\
-#  classpath:initSQL/categories.sql,\
-#  classpath:initSQL/styles.sql
+spring.sql.init.data-locations=\
+  classpath:initSQL/alimentos.sql,\
+  classpath:initSQL/ubicaciones.sql,\
+  classpath:initSQL/existencias.sql
